{
  "app": {
    "title": "Plezy"
  },
  "auth": {
    "signInWithPlex": "Sign in with Plex",
    "showQRCode": "Show QR Code",
    "authenticate": "Authenticate",
    "authenticationTimeout": "Authentication timed out. Please try again.",
    "scanQRToSignIn": "Scan this QR code to sign in",
    "waitingForAuth": "Waiting for authentication...\nSign in from your browser.",
    "useBrowser": "Use browser",
    "or": "or",
...
    "play": "Play",
    "pause": "Pause",
    "resume": "Resume",
    "error": "Error",
    "search": "Search",
    "home": "Home",
    "back": "Back",
    "settings": "Settings",
    "mute": "Mute",
    "ok": "OK",
    "off": "Off",
    "options": "Options",
    "seasonNumber": "Season ${number}",
...
      "libraries": "Libraries",
      "noLibraries": "No libraries available"
    }
  },
  "addServer": {
    "addMediaBrowserTitle": "Add ${product} server",
    "serverUrls": "Server URLs",
    "serverUrlsHelper": "Multiple URLs allowed, separated by commas.",
    "findServer": "Find server",
    "searchingLocalMediaBrowserServers": "Looking for local ${product} servers...",
    "localMediaBrowserServers": "Local ${product} servers",
    "username": "Username",
    "password": "Password",
    "signIn": "Sign in",
    "change": "Change",
...
